--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		.kies { position: fixed; top: 0; bottom: 0; left: 0; right: 0; background-color: black; opacity: .7; }
 		.kies .letter { position: absolute; top: 50%; width: 100%; margin-top: -2em; font-size: 2em; color: white; text-align: center }
 		.kies .letter input { font-size: 1.3em; width: 1.2em; text-align: center; text-transform: uppercase; }
-		.overzicht { position: fixed; display: inline; top: 1em; right: 1em; background-color: white; } 
+		.overzicht { position: fixed; display: inline; top: 1em; right: 5em; background-color: white; } 
 	</style>
 
 </head>
@@ -48,6 +48,7 @@
 	<script src="/jquery-1.11.1.min.js"></script>
 	<script src="/moment.min.js"></script>
 	<script src="/socket.io-1.2.1.js"></script>
+	<script src="/Autolinker.min.js"></script>
 	<script src="/bonkiechat.js"></script>
 
 </body>
